--- a/css/layout.css
+++ b/css/layout.css
@@ -6,8 +6,10 @@
 /* overall page structure */
 body {
   margin: 0;
-  overflow-y: scroll;
+  overflow-y: auto;
   overflow-x: hidden;
+  background-color: #009;
+  background-image: linear-gradient(to bottom right, #09F, #69C, #969);
 }
 
 body>header {
@@ -16,12 +18,13 @@ body>header {
   padding: 1vh 1vw;
   background-color: #999;
   background-image: linear-gradient(to bottom right, white, silver);
+  box-shadow: 0px 0px 1rem black;
 }
 
 body>main {
   width: 100vw;
   min-height: calc(96vh - 6rem);
-  padding: 1vh 1vw;
+  padding: 1vh 1em;
 }
 
 body>footer {
@@ -30,6 +33,7 @@ body>footer {
   background-color: black;
   min-height: calc(2vh + 1rem);
   font-size: 1rem;
+  box-shadow: 0px 0px 1em black;
 }
 
 /* header elements */
@@ -39,4 +43,17 @@ body>header h1 {
   margin: 1rem auto;
 }
 
-/* main elements */
+/* main elements and main positioning */
+body>main {  
+  display: grid;
+}
+
+@media (min-width: 62em) {
+  body>main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+body>main>* {
+  width: 30em;
+}
