--- a/css/layout.css
+++ b/css/layout.css
@@ -7,9 +7,10 @@
 body {
   margin: 0;
   overflow-y: auto;
-  overflow-x: hidden;
-  background-color: #009;
+  overflow-x: hidden;  
+  background-color: #09F;
   background-image: linear-gradient(to bottom right, #09F, #69C, #969);
+  background-attachment: fixed;
 }
 
 body>header {
