--- a/css/layout.css
+++ b/css/layout.css
@@ -14,22 +14,34 @@ body {
   background-attachment: fixed;
   display: grid;
   grid-template-columns: 100vw;
-  grid-template-rows: min-content auto min-content;
+  grid-template-rows: min-content min-content auto min-content;
 }
 
 body>header {
+  grid-row: 1 / auto;
   padding: 1vh 1vw;
   background-color: #999;
   background-image: linear-gradient(to bottom right, white, silver);
   box-shadow: 0px 0px 1rem black;
 }
 
+#messages {
+  grid-row: 2 / auto;
+  padding: 1em;
+}
+
+#messages:empty {
+  display:none;
+}
+
 body>main {
+  grid-row: 3 / auto;
   width: 100vw;
   padding: 1vh 1em;
 }
 
 body>footer {
+  grid-row: 4 / auto;
   width: 100vw;
   padding: 1vh 1vw;
   background-color: black;
