fix(Server): run useful command when determining if server is running

--- a/css/servers.css
+++ b/css/servers.css
@@ -66,6 +66,22 @@
   }
 }
 
+/* Statusmeldungen */
+
+.server>p {
+  text-align: center;
+}
+
+/* Service-Liste */
+
+ul.services {
+  text-align: center;
+}
+
+ul.services li {
+  list-style-type: none;
+}
+
 /* Status-Effekte */
 
 .server.status-listening {
