--- a/css/servers.css
+++ b/css/servers.css
@@ -1,85 +1,57 @@
-.server {
-  background-color: #999;
-  background-image: linear-gradient(to bottom right, white, silver);
-  border: 0.5ex outset #777;
-}
-
-/* gruppierende Elemente */
-
-.server>* {
-  padding: 0.5ex;
-}
-
-/* header und header-Action-Button */
-
-.server>header {
-  border-bottom: 0.3ex solid black;
-  margin-bottom: 0.5ex;
-  background-image: linear-gradient(to top, white, silver);
-  display:grid;
-  grid-template-rows: 3em 1fr;
-  grid-template-columns: 3em 1fr 3em;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.server>header>h1 {
-  margin-top: 0.25em;
-  margin-bottom: 0.25em;
-  text-align: center;
-  font-size: 2em;
-  grid-column: 1 / span 3;
-  grid-row: 2 / auto;
-}
-
-.server>header img {
-  width: 2.5em;
-}
-
-.server>header>img {
-  grid-column: 1 / auto;
-  grid-row: 1 / auto;
-  margin: auto;
-}
-
-.server>header>form {
-  grid-column: 3 / auto;
-  grid-row: 1 / auto;
-  margin: auto;
-}
-
-.server>header>form>button {
-  padding: 0;
-}
-
-@media (min-width: 25em) {
-  .server>header {
-    grid-template-rows: 1fr;
-    grid-template-columns: 3em 1fr 3em;
-    justify-content: space-around;
-    justify-content: space-evenly;
-  }
-  
-  .server>header>h1 {
-    grid-row: 1 / auto;
-    grid-column: 2 / auto;
-  }
-}
-
-/* Statusmeldungen */
-
-.server>p {
-  text-align: center;
-}
-
 /* Service-Liste */
 
 ul.services {
   text-align: center;
+  margin: 0.5em 0.5em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-ul.services li {
+ul.services>li {
   list-style-type: none;
+  display: block;
+}
+
+ul.services>li>a {
+  display:grid;
+  font-size: 2em;
+  grid-template-rows: 1.25em 1fr;
+  grid-template-columns: 1.25em 1fr 1.25em;
+  text-decoration: none;
+  color: black;
+  background-color: #999;
+  background-image: linear-gradient(to bottom right, white, silver);
+  border: 0.25ex outset #777;
+}
+
+ul.services>li>a:active {
+  border-style: inset;
+}
+
+ul.services a>img {
+  margin: auto;
+  width: 1em;
+}
+
+ul.services a>span {
+  grid-column: 1 / span 3;
+  grid-row: 2 / auto;
+}
+
+@media (min-width: 25em) {
+  ul.services>li>a {
+    grid-template-rows: 1fr;
+    grid-template-columns: 1.25em 1fr 1.25em;
+    justify-content: space-around;
+    justify-content: space-evenly;
+  }
+
+  ul.services a>span {
+    grid-row: 1 / auto;
+    grid-column: 2 / auto;
+  }
 }
 
 /* Status-Effekte */
