--- a/css/panels.css
+++ b/css/panels.css
@@ -1,7 +1,22 @@
+/* Panel-Container */
+
+.panel-container {  
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+/* Panel-Elemente */
+
 .panel {
   background-color: #999;
   background-image: linear-gradient(to bottom right, white, silver);
   border: 0.5ex outset #777;
+  width: 100%;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
 }
 
 @media (min-width: 30em) {
@@ -27,7 +42,7 @@
 /* header und header-Action-Button */
 
 .panel>header {
-border-bottom: 0.3ex solid black;
+  border-bottom: 0.3ex solid black;
   margin-bottom: 0.5ex;
   background-image: linear-gradient(to top, white, silver);
   display:grid;
@@ -78,6 +93,18 @@ border-bottom: 0.3ex solid black;
     grid-row: 1 / auto;
     grid-column: 2 / auto;
   }
+}
+
+/* Panel-Footer */
+.panel>footer {
+  border-top: 0.3ex solid black;
+  background-image: linear-gradient(to bottom, white, silver);
+  margin-top: 0.5ex;
+}
+
+.panel>footer p {
+  margin: 0.25ex 0ex;
+  text-align: center;
 }
 
 /* Statusmeldungen */
