--- a/css/layout.css
+++ b/css/layout.css
@@ -4,6 +4,10 @@
 }
 
 /* overall page structure */
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -43,6 +47,10 @@ body>main {
   grid-row: 3 / auto;
   width: 100vw;
   padding: 1vh 0;
+}
+
+body>main>h1 {
+  text-align: center;
 }
 
 body>footer {
